deploy/kustomize/traefik-routes/chromium-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: chromium-reference-grant
  namespace: chromium
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: traefik
  to:
  - group: ""
    kind: Service
    name: chromium
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: chromium-httproute
  namespace: traefik
spec:
  parentRefs:
  - name: debian-k3s-gateway
    namespace: traefik
    kind: Gateway
    sectionName: websecure
  hostnames:
  - chromium.debian-k3s
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: chromium
      namespace: chromium
      port: 3000
      kind: Service
      weight: 100
