deploy/kustomize/traefik-routes/pdf-generator-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: pdf-generator-reference-grant
  namespace: pdf-generator
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: traefik
  to:
  - group: ""
    kind: Service
    name: pdf-generator
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pdf-generator-httproute
  namespace: traefik
spec:
  parentRefs:
  - name: debian-k3s-gateway
    namespace: traefik
    kind: Gateway
    sectionName: websecure
  hostnames:
  - pdf-generator.debian-k3s
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pdf-generator
      namespace: pdf-generator
      port: 3000
      kind: Service
      weight: 100
